# Udva-Backend

./: .env.example  .gitignore  Architecture.md  Dockerfile  alembic.ini  celery_app.py  pyproject.toml
alembic/: env.py
alembic/versions/: 20260318_0000_a1b2c3d4e5f6_initial_schema.py  20260318_0001_b2c3d4e5f6a7_add_user_settings_columns.py  20260318_0002_c3d4e5f6a7b8_add_visibility_weekly_table.py  20260323_0003_rename_stripe_to_dodo.py  20260325_0004_add_competitor_domain.py  20260327_0005_add_onboarding_scans_table.py
app/: config.py  database.py  main.py
app/lib/: auth.py  dodo_client.py  email.py  llm_clients.py  reddit_client.py  serper_client.py
app/models/: __init__.py  brand.py  campaign.py  citation_source.py  competitor.py  credit_ledger.py  keyword.py  mention.py  onboarding_scan.py  query.py  reddit_account.py  user.py  visibility_score.py  visibility_weekly.py
app/routes/: auth.py  billing.py  brands.py  listening.py  settings.py  visibility.py
app/schemas/: brand.py  mention.py  settings.py  user.py  visibility.py
app/tasks/: alert_dispatcher.py  citation_extractor.py  competitor_diff.py  deduplicator.py  llm_dispatch.py  query_builder.py  quora_collector.py  reddit_crawler.py  relevance_scorer.py  response_parser.py  rollup.py  score_writer.py  serp_ranker.py
tests/: conftest.py  test_alert_dispatcher.py  test_llm_clients.py  test_llm_dispatch.py  test_reddit_crawler.py  test_relevance_scorer.py  test_response_parser.py
